opam-version: "2.0"
maintainer: "Asemio"
authors: [
  "Simon Grondin"
  "Larry Lee"
]
synopsis: "Asemio's DB lib"
description: """
Abstraction over Caqti that provides transactions and a smoother developer experience.
"""
license: "MIT"
tags: []
homepage: "https://github.com/asemio/ADB"
doc: "https://github.com/asemio/ADB"
bug-reports: "https://github.com/asemio/ADB/issues"
depends: [
  "ocaml" { >= "4.11.0" }
  "dune" { >= "1.9.0"}

  "core" { >= "v0.16.0" & < "v0.17.0" }
  "re"
  "lwt" { >= "5.6.0" & < "6.0.0" }

  "caqti" { >= "1.0.0" & < "2.0.0" }
  "caqti-lwt"
  "caqti-driver-postgresql"
  "postgresql" { >= "4.0.0" & < "5.0.0" }
  "ppx_rapper" { >= "2.0.0" & < "3.0.0" }

  "ppx_deriving" { >= "4.4.1" }
  "ppx_deriving_yojson" { >= "3.5.2" }
  "uuidm" { >= "0.9.0" }
  "yojson" { >= "1.7.0" }

  "ppx_expect" { with-test }
  "ocamlformat" { with-test & = "0.25.1" }
  "ocaml-lsp-server" { with-test }
]
build: ["dune" "build" "-p" name "-j" jobs]
